# Raycaster-Engine

./: .gitignore  CMakeLists.txt  README.md  main.c  map.txt
cmake/: CMakeLists.txt  Makefile
include/: camera.h  globals.h  raycaster.h
src/: camera.c  globals.c  main.c  racyaster.c
